syntax = "proto3";

option go_package = "./proto";

package book_service;

service BookService {
    rpc CreateBook(stream Book) returns (stream BookResponse);
    rpc ReadBook(BookID) returns (Book);
    rpc UpdateBook(Book) returns (BookResponse);
    rpc DeleteBook(BookID) returns (BookResponse);
}

message Book {
    string id = 1 ;
    string title = 2;
    string author = 3;
}

message BookID {
    int32 id = 1;
}

message BookResponse {
    string status = 1;
}